Remove instructors line

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <p><strong>Organizers</strong>: Tim Griffin, University of Minnesota</p>
 
-<p><strong>Instructors</strong>: Tim Griffin, Dave Clements, Candace Guerrero, Getiria Onsongo and Pratik Jagtap</p>
+<!-- <p><strong>Instructors</strong>: Tim Griffin, Dave Clements, Candace Guerrero, Getiria Onsongo and Pratik Jagtap</p> -->
 
 <p>This workshop will provide attendees the opportunity to take Galaxy for a 'test drive' in analyzing MS-based protoemics data. Attendees will have the opportunity to access a Galaxy instance and walk through the basic steps of setting up an analysis of representative MS data from a proteomics experiment. The hands-on tutorial will include steps such as pre-processing of mass spectral data, sequence database searching, and filtering and visualizing outputs.</p>
 
