--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
 <!-- <p><strong>Instructors</strong>: Tim Griffin, Dave Clements, Candace Guerrero, Getiria Onsongo and Pratik Jagtap</p> -->
 
-<p>This workshop will provide attendees the opportunity to take Galaxy for a 'test drive' in analyzing MS-based protoemics data. Attendees will have the opportunity to access a Galaxy instance and walk through the basic steps of setting up an analysis of representative MS data from a proteomics experiment. The hands-on tutorial will include steps such as pre-processing of mass spectral data, sequence database searching, and filtering and visualizing outputs.</p>
+<p>This workshop will provide attendees the opportunity to take Galaxy for a 'test drive' in analyzing MS-based proteomics data. Attendees will have the opportunity to access a Galaxy instance and walk through the basic steps of setting up an analysis of representative MS data from a proteomics experiment. The hands-on tutorial will include steps such as sequence database searching and processing outputs.</p>
 
-<p>Attendees will also be introduced to basic operations and concepts of the Galaxy operating environment, such as the creation of histories and workflows, and functionalities for sharing tools and workflows with others. An overview of the current state of software available in Galaxy for proteomics and multi-omics applications will also be provided.</p>
+<p>Attendees will also be introduced to basic operations and concepts of the Galaxy operating environment, such as the creation of histories and workflows and other basic functionalities. An overview of the current state of software available in Galaxy for proteomics and multi-omics applications will also be provided.</p>
 
-<p>The workshop will be led by both developers and users well-versed in the use of Galaxy for multi-omics data analysis.</p>
+<p>The workshop documentation is available here: <a href="Link here"></a></p>
 
 <p>Attendees are encouraged to bring a laptop computer to participate.</p>
 
-<p>If you attended this workshop please <a href="http://z.umn.edu/asmsfb"> let us know if it was useful</a></p>
+<p>Please provide us with feedback here<a href="http://z.umn.edu/asmsfb"> http://z.umn.edu/asmsfb</a></p>
 
 
 </ul>
