--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <p>Attendees will also be introduced to basic operations and concepts of the Galaxy operating environment, such as the creation of histories and workflows and other basic functionalities. An overview of the current state of software available in Galaxy for proteomics and multi-omics applications will also be provided.</p>
 
-<p>The workshop documentation is available here: <a href="Link here"></a></p>
+<p>The workshop documentation is available here: <a href="https://netfiles.umn.edu/xythoswfs/webview/_xy-17908461_1"></a>https://netfiles.umn.edu/xythoswfs/webview/_xy-17908461_1</p>
 
 <p>Attendees are encouraged to bring a laptop computer to participate.</p>
 
